[package]
name = "commit-message"
version = "0.1.0"
edition = "2024"
required-features = ["macros"]

[dependencies]
bytes = "1.10.1"
clap = { version = "4.5.41", features = ["derive"] }
git2 = "0.20.2"
ollama-rs = {git = "https://github.com/pepperoni21/ollama-rs.git", branch = "master", features = ["stream","macros"]}
reqwest = { version = "0.12.22", features = ["blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tokio = { version = "1.46.1", features = ["full"] }
tokio-stream = "0.1.17"
schemars = { version = "1.0.4", features = ["preserve_order"] }
